--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,5 @@ pythonenv*
 /clang/utils/analyzer/projects/*/RefScanBuildResults
 # automodapi puts generated documentation files here.
 /lldb/docs/python_api/
-llvm/out/
+/llvm/out/
+/jitlink-test/
